# mini_platform_project

./: .gitignore  FRONTEND_STATUS.md  LESSONS.MD  README.md  TASK.md  UPDATED_DESCRIPTION.md  architecture.md  data-engineering.md  index.html  mini_idp.db  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js  temp.txt  test_json_serialization.py
.git_disabled/: AUTO_MERGE  COMMIT_EDITMSG  FETCH_HEAD  MERGE_HEAD  MERGE_MSG  config  index  packed-refs
app/: main.py
app copy/: config.py  main.py
app copy/routers/: ask.py
documentation/: DB_MIGRATION.md  RUNWAY_TASKS.md  STAGEWISE.MD  TASK.md  TASK_DS.md  UX_FIXES_MANUAL_FEATURE_SELECTION.md  supabase_security.md
frontend/: package-lock.json  package.json
scripts/: export_sqlite_data.py
src/: App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
supabase/: config.toml
tests/: test_algorithm_registry.py  test_data_profiling_service.py  test_evaluation_service.py  test_file_service_ds.py  test_ml_json_fix.py  test_ml_models.py  test_ml_training.py  test_ml_training_fixed.py  test_preprocessing.py
trained_models/: 00ee22b7-d215-4f85-9ada-f50e21de05a8_decision_tree_regressor_1748858272.joblib  00ee22b7-d215-4f85-9ada-f50e21de05a8_linear_regression_1748858272.joblib  11c9715e-25ce-493d-b972-54c68279cd02_decision_tree_regressor_1748865183.joblib  11c9715e-25ce-493d-b972-54c68279cd02_linear_regression_1748865183.joblib  11c9715e-25ce-493d-b972-54c68279cd02_random_forest_regressor_1748865183.joblib  2a47e0f7-b91b-49b0-b834-1737c13727c4_linear_regression_1748127961.joblib  (+51 more)
(+130 files in other folders)
