[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-platform-project"
version = "1.0.0"
description = "Internal ML Training Platform"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "prefect>=2.14.0",
    "joblib>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workflows*"]

[tool.pylint.main]
init-hook = 'import sys; sys.path.append("app"); sys.path.append("workflows")'

[tool.pyright]
include = ["app", "workflows"]
pythonPath = "."
extraPaths = ["app", "workflows"]

[tool.pylance]
include = ["app", "workflows"]
extraPaths = ["app", "workflows"] 